--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nike",
-  "homepage": "https://Avinesh2.github.io/",
+  "homepage": "https://Avinesh2.github.io/Nike-Landing-Page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
