--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nike",
   "homepage": "https://Avinesh2.github.io/Nike-Landing-Page",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
