--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nike",
-  "homepage": "https://Avinesh2.github.io/Nike-Landing-Page",
+  "homepage": "https://Avinesh2.github.io",
   "private": false,
   "version": "0.0.0",
   "type": "module",
