--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "nike",
-  "homepage": "https://Avinesh2.github.io",
+  "homepage": "https://Avinesh2.github.io/Nike-Landing-Page/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
